k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cash-in
  namespace: cash-in
  labels:
    app: cash-in
spec:
  selector:
    matchLabels:
      app: cash-in
  template:
    metadata:
      labels:
        app: cash-in
    spec:
      containers:
        - name: cash-in-app
          image: gcr.io/error/error
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: gcloud-cash-in-key-volume
              mountPath: ./secrets
      volumes:
        - name: gcloud-cash-in-key-volume
          secret:
            secretName: gcloud-cash-in-key
        - name: gcloud-grpc-client-accounts-engine-key-volume
          secret:
            secretName: gcloud-grpc-client-accounts-engine-key
