k8s/ingress.yaml
---
apiVersion: extensions/v1
kind: Ingress
metadata:
  namespace: cash-in
  name: cash-in-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "nginx-proxy-lb-ip"
spec:
  backend:
    serviceName: cash-in-service
    servicePort: 80
